# file2md

./: .coveragerc  .dockerignore  Dockerfile  README.md  TESTING.md  app.py  pyproject.toml  pytest.ini  replit.nix  vercel.json
.github/: dependabot.yml
.github/workflows/: docker-image.yml  tests.yml
static/css/: custom.css
static/js/: main.js
templates/: index.html
tests/: __init__.py  remote_samples.py  sample_files.py  test_app.py  test_converter.py  test_error_handling.py  test_samples.py
tests/fixtures/public/: sample.html
utils/: converter.py
