[tool.poetry]
name = "fil2md"
version = "0.1.0"
description = "A web-based file converter that transforms various file formats into Markdown"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
markitdown = "^0.0.1a4"
werkzeug = "^3.1.3"
openpyxl = "^3.1.5"
python-pptx = "^1.0.2"
pillow = "^11.0.0"
beautifulsoup4 = "^4.13.5"
pypdf2 = "^3.0.1"
lxml = "^5.3.0"
markdown = "^3.7"
python-docx = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
